--- a/Dekkeni/Base.lproj/Main.storyboard
+++ b/Dekkeni/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.75686274509803919" green="0.25882352941176467" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.85098039215686272" green="0.11764705882352941" blue="0.094117647058823528" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="99H-3H-Paq" firstAttribute="height" secondItem="Jbp-EZ-vyJ" secondAttribute="height" id="EJl-aC-4Hb"/>
                             <constraint firstItem="99H-3H-Paq" firstAttribute="leading" secondItem="1yE-qi-xTA" secondAttribute="leading" id="FQD-sB-uI8"/>
